--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ title                    : "Jimmy T.H. Smith"
 title_separator          : "-"
 name                     : &name "Jimmy T.H. Smith"
 description              : &description "personal description"
-url                      : https://academicpages.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+url                      : https://jimmysmith1919.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "jimmysmith1919/jimmysmith1919.github.io"
 teaser                   :  # filename of teaser fallback teaser image placed in /images/, .e.g. "500x300.png"
