--- a/_config.yml
+++ b/_config.yml
@@ -81,7 +81,7 @@ analytics:
 # Site Author
 author:
   name             : "Jimmy T.H. Smith"
-  avatar           : "profile.png"
+  avatar           : "20220927-Jimmy_Smith-45-RT-Square.jpg"
   bio              : "PhD Student @ Stanford University"
   location         : "Stanford, CA"
   employer         :
