--- a/_config.yml
+++ b/_config.yml
@@ -82,7 +82,7 @@ analytics:
 author:
   name             : "Jimmy T.H. Smith"
   avatar           : "20220927-Jimmy_Smith-45-RT-Square.jpg"
-  bio              : "PhD Student @ Stanford University"
+  bio              : "Founding Scientist at Liquid AI. PhD Student @ Stanford University"
   location         : "Stanford, CA"
   employer         :
   pubmed           : 
