--- a/_config.yml
+++ b/_config.yml
@@ -82,12 +82,12 @@ analytics:
 author:
   name             : "Jimmy T.H. Smith"
   avatar           : "20220927-Jimmy_Smith-45-RT-Square.jpg"
-  bio              : "Founding Scientist at Liquid AI. PhD Student @ Stanford University"
+  bio              : "Founding Scientist at Liquid AI."
   location         : "Stanford, CA"
   employer         :
   pubmed           : 
   googlescholar    : "https://scholar.google.com/citations?user=GC9Vv1wAAAAJ&hl=en"
-  email            : "jsmith14@stanford.edu"
+  email            : "jimmysmith1919@gmail.com"
   researchgate     :  # example: "https://www.researchgate.net/profile/yourprofile"
   uri              :
   bitbucket        :
